# compilers-labs

1-lexical-analysis/: .gitignore  CMakeLists.txt  make_tarball.sh
1-lexical-analysis/examples/: bang-error.c.out.expected  dummy.c.out.expected  float-literal-two-dot.c.out.expected  keywords-identifiers.c  keywords-identifiers.c.out.expected  literals.c  literals.c.out.expected  multi-char-operators.c  multi-char-operators.c.out.expected  single-char.c  single-char.c.out.expected  unterminated-string.c.out.expected
1-lexical-analysis/src/driver/: main.cpp
1-lexical-analysis/src/lexer/: lexer.cpp  lexer.hpp  token.cpp
2-parsing/: CMakeLists.txt  make_tarball.sh
2-parsing/examples/: control-flow.c  control-flow.c.out.expected  dangling-else.c  dangling-else.c.out.expected  dummy.c  dummy.c.out.expected  function-calls.c  function-calls.c.out.expected  literals.c  literals.c.out.expected  operators-nonassoc.c  operators-nonassoc.c.out.expected  operators.c  operators.c.out.expected  var-references-conflict.c  var-references-conflict.c.out.expected  var-references.c  var-references.c.out.expected
2-parsing/src/driver/: main.cpp
2-parsing/src/parser/: parser.cpp  parser.hpp
3-sema/: .clang-format  CMakeLists.txt  README.md
3-sema/examples/: functionpass.c.out.expected  scope-control-flow.c  scope-params-vars.c  scope-params-vars.c.out.expected  scope-redefine-vars.c.out.expected  scope-unknown-var.c.out.expected  types-control-flow-return-ok.c  types-control-flow-return-ok.c.out.expected  types-control-flow-return-wrong.c  types-control-flow-return-wrong.c.out.expected  types-control-flow-while.c  types-control-flow-while.c.out.expected  types-operators-binary-different-types.c  types-operators-binary-different-types.c.out.expected  types-operators-binary-non-numeric.c  types-operators-retval.c  types-operators-retval.c.out.expected  types-vars-init-wrong-type.c  types-vars.c.out.expected
3-sema/src/ast/: ast.hpp  prettyprinter.cpp  prettyprinter.hpp
3-sema/src/driver/: main.cpp
3-sema/src/sema/: collectfuncdeclspass.hpp  typecheckingpass.cpp  typecheckingpass.hpp  util.cpp  util.hpp
3-semantic-analyisis/: README.md  make_tarball.sh
3-semantic-analyisis/examples/: functionpass.c  scope-control-flow.c.out.expected  scope-init-same-name-error.c  scope-init-same-name-error.c.out.expected  scope-init-same-name.c  scope-init-same-name.c.out.expected  scope-redefine-vars.c  scope-unknown-var.c  types-control-flow-if.c  types-control-flow-if.c.out.expected  types-control-flow-return-ok.c  types-operators-binary-non-numeric.c.out.expected  types-operators-unary-non-numeric.c  types-operators-unary-non-numeric.c.out.expected  types-vars-array-index-wrong-type.c  types-vars-array-index-wrong-type.c.out.expected  types-vars-init-wrong-type.c.out.expected  types-vars.c
3-semantic-analyisis/src/lexer/: token.hpp
3-semantic-analyisis/src/sema/: collectfuncdeclspass.cpp  scoperesolutionpass.cpp  scoperesolutionpass.hpp  semanticexception.hpp  typecheckingpass.cpp  typecheckingpass.hpp
4-codegen/: .devcontainer.json  CMakeLists.txt  make_tarball.sh
4-codegen/examples/: dummy.c  funccall.c  funcdecl.c  operators.c  optimisations.c  params.c  variables.c
4-codegen/src/codegen-x64/: codegen-x64.cpp  codegen-x64.hpp  codegenexception.hpp  module.cpp  module.hpp  optimise-x64.cpp  optimise-x64.hpp
4-codegen/src/driver/: main.cpp
4-codegen/src/lexer/: lexer.hpp
4-codegen/src/runtime/: runtime.cpp
5-llvmir/: .devcontainer.json  CMakeLists.txt  make_tarball.sh
5-llvmir/examples/: arrays.c  control-flow-2.c  control-flow.c  funccall.c  operators.c  parameters.c  variables.c
5-llvmir/src/codegen-llvm/: codegen-llvm.cpp  codegen-llvm.hpp
5-llvmir/src/driver/: main.cpp
6-llvm-pass/: CMakeLists.txt  README.md  bench  make_tarball.sh
6-llvm-pass/examples/: bubble-sort.c  dynamic-cornercase.c  dynamic.c  static-overflow.c
6-llvm-pass/extra-tests/: gaussian-elimination.c
6-llvm-pass/src/ast/: visitor.hpp
6-llvm-pass/src/boundscheck/: pass.cpp
6-llvm-pass/src/codegen-llvm/: codegen-llvm.hpp  codegenexception.hpp  util.hpp
6-llvm-pass/src/driver/: main.cpp
6-llvm-pass/src/parser/: parser.hpp
6-llvm-pass/src/runtime/: runtime.cpp
6-llvm-pass/src/sema/: collectfuncdeclspass.hpp  scoperesolutionpass.hpp  typecheckingpass.hpp
7-llvm-code-transform/: .devcontainer.json  CMakeLists.txt  make_tarball.sh
7-llvm-code-transform/examples/: add-two-arrays.c  boundscheck-1.c  boundscheck-2.c  simple.c  sum-array.c
